fix: #1564 collapse arrow in RTL mode

--- a/src/components/styled/collapse.css
+++ b/src/components/styled/collapse.css
@@ -12,6 +12,9 @@
   box-shadow: 2px 2px;
   pointer-events: none;
 }
+[dir="rtl"] .collapse-arrow .collapse-title:after {
+  --tw-rotate: -45deg;
+}
 .collapse-plus .collapse-title:after {
   @apply absolute block h-2 w-2 transition-all duration-300 ease-in-out;
   top: 0.9rem;
@@ -62,6 +65,11 @@
 .collapse-arrow:focus:not(.collapse-close) .collapse-title:after,
 .collapse-arrow:not(.collapse-close) input[type="checkbox"]:checked ~ .collapse-title:after {
   @apply rotate-[225deg] translate-y-[-50%];
+}
+[dir="rtl"] .collapse-open.collapse-arrow .collapse-title:after,
+[dir="rtl"] .collapse-arrow:focus:not(.collapse-close) .collapse-title:after,
+[dir="rtl"] .collapse-arrow:not(.collapse-close) input[type="checkbox"]:checked ~ .collapse-title:after {
+  --tw-rotate: 135deg;
 }
 .collapse-open.collapse-plus .collapse-title:after,
 .collapse-plus:focus:not(.collapse-close) .collapse-title:after,
